--- a/css/blog.css
+++ b/css/blog.css
@@ -69,6 +69,10 @@
   padding-bottom: 2rem;
 }
 
+#top-link footer {
+  color: #ffffff;
+}
+
 .bg-gra {
   background: -webkit-gradient(linear, left bottom, left top, from(#66fbf6), to(#a18cd1));
   background: -webkit-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
