--- a/css/blog.css
+++ b/css/blog.css
@@ -80,3 +80,7 @@
   background: -o-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
   background: linear-gradient(to top, #66fbf6 0%, #a18cd1 100%);
 }
+
+footer {
+  text-align: center;
+}
