--- a/css/blog.css
+++ b/css/blog.css
@@ -2,6 +2,15 @@
 @import url('https://fonts.googleapis.com/css?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Nanum+Pen+Script|VT323&display=swap');
 
+#google_translate_element {
+  margin-top: 3vh;
+  padding: 2rem;
+  position: fixed;
+  margin-left: 88vw;
+  top: 0;
+  left: 0;
+}
+
 #blog h1 {
   font-family: 'VT323', monospace;
   color: black;
