--- a/css/blog.css
+++ b/css/blog.css
@@ -82,6 +82,10 @@
   color: #ffffff;
 }
 
+.tab1 {
+  position:absolute;left:100px;
+}
+
 .bg-gra {
   background: -webkit-gradient(linear, left bottom, left top, from(#66fbf6), to(#a18cd1));
   background: -webkit-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
