--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@
 #portfolio-s1 {
   margin: 0;
   padding: 0;
-  background: url("../img/portfolio-s1.jpg") no-repeat center/cover;
   width: 100%;
   height: 100%;
   position: relative;
@@ -74,8 +73,11 @@ section#portfolio-tech, section#portfolio-edu-exp table {
 
 /*----------------------Section 3 - Exp / Education -------------------------*/
 section#portfolio-edu-exp {
-  background-color: #daeee3;
   font-size: 16px;
+}
+
+#portfolio-edu-exp tbody tr td {
+  line-height: 25px;
 }
 
 #portfolio-edu-exp h3 {
@@ -274,6 +276,15 @@ body {
   margin: 0;
   color: #fff;
   line-height: 1.6;
+}
+
+.bg-gra {
+  background: -webkit-gradient(linear, left bottom, left top, from(#66fbf6), to(#a18cd1));
+  background: -webkit-gradient(linear, left bottom, left top, from(#66fbf6), to(#a18cd1));
+  background: -webkit-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
+  background: -moz-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
+  background: -o-linear-gradient(bottom, #66fbf6 0%, #a18cd1 100%);
+  background: linear-gradient(to top, #66fbf6 0%, #a18cd1 100%);
 }
 
 #portfolio-s1 .container-fluid, #portfolio-edu-exp .container-fluid, #portfolio-tech .container-fluid {
@@ -516,6 +527,11 @@ nav a#openup {
   #portfolio-projects .container-fluid {
     padding-left: 20rem;
     padding-right: 20rem;
+  }
+
+  #portfolio-s1 .container-fluid, #portfolio-edu-exp .container-fluid, #portfolio-tech .container-fluid {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
 }
