--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
   --primary-color-hover: #0e98b9;
   --secondary-color: #2105b9;
   --secondary-color-hover: #0a90b9;
-  --light-color: #e0c0b8;
 }
 
 /*------------------------------home.html---------------------------------*/
@@ -16,12 +15,8 @@
 #portfolio-s1 {
   margin: 0;
   padding: 0;
-  width: 100%;
   height: 100%;
-  position: relative;
-  overflow-y: hidden;
 }
-
 
 #portfolio-s1 h1 {
   font-family: 'Akronim', cursive;
@@ -248,14 +243,6 @@ section#portfolio-projects {
   box-shadow: 0 0 0 2px #293b89;
 }
 
-/* --------------------------------------Footer---------------------------------- */
-
-#portfolio-footer .footer-copyright {
-  color: #ffffff;
-  font-weight: bold;
-  padding-bottom: 0;
-}
-
 /* ----------------------------- UTILITIES----------------------------*/
 /* --------------------------------SECTION------------------------------------ */
 .section {
@@ -276,6 +263,7 @@ body {
   margin: 0;
   color: #fff;
   line-height: 1.6;
+  position: relative;
 }
 
 .bg-gra {
@@ -305,26 +293,6 @@ a {
   margin-top: 1rem;
 }
 
-/*
--- bouncing arrow icon
-.bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
-}
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-25px);
-  }
-  60% {
-    transform: translateY(-10px);
-  }
-}
-*/
 /*-------------------- disable tag matching - portfolio.jsp-----------------------*/
 .ace_editor .ace_marker-layer .ace_bracket {
   display: none
@@ -339,36 +307,12 @@ a {
   color: var(--secondary-color);
 }
 
-.text-light {
-  color: var(--light-color);
-}
-
 .text-center {
   text-align: center;
 }
 
 .text-left {
   text-align: left;
-}
-
-/* ------------------------------------Buttons----------------------------------
-.btn {
-  color: #ffffff;
-}
-
-.btn-primary {
-  background: var(--primary-color);
-}
-
-.btn-primary:hover {
-  background: var(--primary-color-hover);
-}
-.btn-secondary {
-  background: var(--secondary-color);
-}
-
-.btn-secondary:hover {
-  background: var(--secondary-color-hover);
 }
 
 /* ------------------------------------Navigation------------------------------- */
@@ -457,6 +401,11 @@ nav a#openup {
 
 .cf {
   zoom: 1;
+}
+
+footer {
+  padding: 0;
+  text-align: center;
 }
 
 /*--------------------------------QUERIES MEDIA----------------------------*/
@@ -719,5 +668,7 @@ nav a#openup {
     margin: 0 0 30px 0;
   }
 }
+
+
 
 
