change blog title padding

--- a/css/blog.css
+++ b/css/blog.css
@@ -24,7 +24,7 @@
   color: black;
   font-size: 4rem;
   margin-top: 3rem;
-  padding-bottom: 3rem;
+  padding: 0 6rem 3rem 6rem;
   text-align: center;
 }
 
